syntax = "proto3";

package gophkeeper;

option go_package = "grpc/proto";

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
}

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message DeleteUserRequest {
}

message DeleteUserResponse {
}


message Credentials {
  string title = 1;
  string login = 2;
  string password = 3;
  string created_at = 4;
  string updated_at = 5;
  string meta = 6;
}

message Text {
  string title = 1;
  string content = 2;
  string created_at = 3;
  string updated_at = 4;
  string meta = 5;
}

message BinaryData {
  string title = 1;
  bytes content = 2;
  string created_at = 3;
  string updated_at = 4;
  string meta = 5;
}

message BankCard {
  string title = 1;
  string card_holder = 2;
  string card_number = 3;
  string card_expire = 4;
  string card_cvv = 5;
  string created_at = 6;
  string updated_at = 7;
  string meta = 8;
}

message UserData {
  repeated Credentials credentials = 1;
  repeated Text text = 2;
  repeated BinaryData binary_data = 3;
  repeated BankCard bank_card = 4;
}

message StreamDBRequest {
}

message StreamDBResponse {
  UserData user_data = 1;
}


message CreateCredentialsRequest {
  Credentials credentials = 1;
}

message CreateCredentialsResponse {
}

message CreateTextRequest {
  Text text = 1;
}

message CreateTextResponse {
}

message CreateBinaryDataRequest {
  BinaryData binary_data = 1;
}

message CreateBinaryDataResponse {
}

message CreateBankCardRequest {
  BankCard bank_card = 1;
}

message CreateBankCardResponse {
}


message UpdateCredentialsRequest {
  Credentials credentials = 1;
}

message UpdateCredentialsResponse {
}

message UpdateTextRequest {
  Text text = 1;
}

message UpdateTextResponse {
}

message UpdateBinaryDataRequest {
  BinaryData binary_data = 1;
}

message UpdateBinaryDataResponse {
}

message UpdateBankCardRequest {
  BankCard bank_card = 1;
}

message UpdateBankCardResponse {
}


message DeleteCredentialsRequest {
  string title = 1;
}

message DeleteCredentialsResponse {
}

message DeleteTextRequest {
  string title = 1;
}

message DeleteTextResponse {
}

message DeleteBinaryDataRequest {
  string title = 1;
}

message DeleteBinaryDataResponse {
}

message DeleteBankCardRequest {
  string title = 1;
}

message DeleteBankCardResponse {
}


service GophKeeper {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  rpc StreamDB(StreamDBRequest) returns (stream StreamDBResponse) {};

  rpc CreateCredentials(CreateCredentialsRequest) returns (CreateCredentialsResponse);
  rpc CreateText(CreateTextRequest) returns (CreateTextResponse);
  rpc CreateBinaryData(CreateBinaryDataRequest) returns (CreateBinaryDataResponse);
  rpc CreateBankCard(CreateBankCardRequest) returns (CreateBankCardResponse);

  rpc UpdateCredentials(UpdateCredentialsRequest) returns (UpdateCredentialsResponse);
  rpc UpdateText(UpdateTextRequest) returns (UpdateTextResponse);
  rpc UpdateBinaryData(UpdateBinaryDataRequest) returns (UpdateBinaryDataResponse);
  rpc UpdateBankCard(UpdateBankCardRequest) returns (UpdateBankCardResponse);

  rpc DeleteCredentials(DeleteCredentialsRequest) returns (DeleteCredentialsResponse);
  rpc DeleteText(DeleteTextRequest) returns (DeleteTextResponse);
  rpc DeleteBinaryData(DeleteBinaryDataRequest) returns (DeleteBinaryDataResponse);
  rpc DeleteBankCard(DeleteBankCardRequest) returns (DeleteBankCardResponse);
}